--- a/src/mtw13/wwwroot/index.html
+++ b/src/mtw13/wwwroot/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <h3>Hello! Welcome to the Web Assembly App!</h3>
     <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
